--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
-
+<meta name="google-site-verification" content="Fb52w_Dg_xBSnJS2VwBy_V81AYDlxyGU185xattTvBA" />
 	</head>
 	<body>
 		
