Chỉnh sửa thông tin tomec

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 						<li><span class="first-block">Full Name:</span><span class="second-block">Bùi Ngọc Tuấn</span></li>
 						<li><span class="first-block">Phone:</span><span class="second-block">+84 889747868 or 0983514628</span></li>
 						<li><span class="first-block">Email:</span><span class="second-block">tuanbnonline@gmail.com</span></li>
-						<li><span class="first-block">Website:</span><span class="second-block">bùingọctuấn.com.vn of buingoctuan.com</span></li>
+						<li><span class="first-block">Website:</span><span class="second-block">bùingọctuấn.com.vn of https://tuanbnonline.github.io/</span></li>
 						<li><span class="first-block">Address:</span><span class="second-block">18 đường nguyễn văn cừ Tp Ninh Bình Ninh Bình</span></li>
 					</ul>
 				</div>
@@ -108,6 +108,7 @@
 					<p>Tôi mong muốn: Chia sẻ kinh nghiệm, đóng góp kỹ năng vì sự phát triển của đơn vị và tích lũy năng lực, tri thức của bản thân.
 Tôi đã có 10 năm làm việc trong lĩnh vực IT, trong đó 5 năm trưởng bộ phận phụ trách quản lý về CNTT. Tôi trực tiếp tham gia và chỉ đạo các dự án mở mới từ lúc tiền khai trương đến hoàn thành đi vào vận hành các mảng như: khu công nghiệp, bệnh viện & khách sạn, bất động sản, siêu thị, trường học, du lịch nghỉ dưỡng 5 sao.</p>
 					<p>Ngoài ra tôi đã có kinh nghiệm năng lực để quản lý quản trị các hệ thống,.......</p>
+					<p>Tìm kiếm đánh giá các nhà thầu từ Hạ tầng đến  phần mềm quản lý. Lên kế hoạch triển khai các hạng mục dự án.<li> Kế hoạch triển khai hệ thống </li><li> Kế hoạch tuyển dụng định biên </li> <li>Kế hoạch quản lý nguồn tài nguyên ( ngân sách, tài sản, ...)</li> </p>
 					<p>
 						<ul class="fh5co-social-icons">
 							<li><a href="#"><i class="icon-twitter2"></i></a></li>
