--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 						<li><span class="first-block">Full Name:</span><span class="second-block">Bùi Ngọc Tuấn</span></li>
 						<li><span class="first-block">Phone:</span><span class="second-block">+84 889747868 or 0983514628</span></li>
 						<li><span class="first-block">Email:</span><span class="second-block">tuanbnonline@gmail.com</span></li>
-						<li><span class="first-block">Website:</span><span class="second-block"><a href="https://bùingọctuấn.com.vn">bùingọctuấn.com.vn </a> of <a href="https://tuanbnonline.github.io"> tuanbnonline.github.io</a></span></li>
+						<li><span class="first-block">Website:</span><span class="second-block"><a href="https://bùingọctuấn.vn">bùingọctuấn.vn </a> of <a href="https://tuanbnonline.github.io"> tuanbnonline.github.io</a></span></li>
 						<li><span class="first-block">Address:</span><span class="second-block">18 đường nguyễn văn cừ Tp Ninh Bình Ninh Bình</span></li>
 					</ul>
 				</div>
